--- a/3.html
+++ b/3.html
@@ -7,6 +7,7 @@
   <!-- creating name for the website(tab) -->
   <title>Dong Jae Shin's Website</title>
   <meta charset="utf-8">
+  <link rel = "styelsheet" href="style.css">
 </head>
 
 <body>
