--- a/index.html
+++ b/index.html
@@ -7,15 +7,22 @@
   <!-- creating name for the website(tab) -->
   <title>Dong Jae Shin's Website</title>
   <meta charset="utf-8">
+  <link rel = "stylesheet" href="style.css">
 </head>
-
 <body>
-  <h1><a href = "index.html"> Chris (Dong Jae) Shin's Website</a></h1>
+  <h1><a href = "index.html"> Dong Jae (Chris) Shin's Website</a></h1>
 
-  <ol>
-    <li><a href = "1.html"> HTML </a></li>
-    <li><a href = "2.html"> CSS </a></li>
-    <li><a href = "3.html"> JavaScript </a></li>
-  </ol>
+  <div id = "grid">
+    <ol>
+      <li><a href = "1.html"> About Me </a></li>
+      <li><a href = "2.html"> Projects </a></li>
+      <li><a href = "3.html"> Career </a></li>
+    </ol>
+
+    <div id = "article">
+      <h2> This is typical software/embedded/firmware engineer's website</h2>
+    </div>
+  </div>
 </body>
+
 </html>
