basic stuff done

--- a/1.html
+++ b/1.html
@@ -54,7 +54,8 @@
           <li>
             <strong>Software: </strong>
             Xilinx Vivado, Xilinx ISE, LTSpice, Microsoft Office,
-            Latex, Keil uVision, Git, TortoiseSVN, Trello
+            Latex, Keil uVision, Git, TortoiseSVN, Trello, AWS S3, AWS EC2,
+            Microsoft Azure, IoT Hub, Power BI
           </li>
           <li>
             <strong>Hardware: </strong>
