--- a/3.html
+++ b/3.html
@@ -7,17 +7,45 @@
   <!-- creating name for the website(tab) -->
   <title>Dong Jae Shin's Website</title>
   <meta charset="utf-8">
-  <link rel = "styelsheet" href="style.css">
+  <link rel = "stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1><a href = "index.html"> Chris (Dong Jae) Shin's Website</a></h1>
+  <h1><a href = "index.html"> Dong Jae (Chris) Shin's Website</a></h1>
 
-  <ol>
-    <li><a href = "1.html"> HTML </a></li>
-    <li><a href = "2.html"> CSS </a></li>
-    <li><a href = "3.html"> JavaScript </a></li>
-  </ol>
+  <div id = "grid">
+    <ol>
+      <li><a href = "1.html">  About Me </a></li>
+      <li><a href = "2.html" > Projects </a></li>
+      <li><a href = "3.html" class = "active"> Career </a></li>
+    </ol>
+
+  <div id = "article">
+    <h2>Internship</h2>
+    <h4>Reazon Systems, Inc</h4>
+    <h5>Software Engineering Intern</h5>
+    <h5 class="italic">January 2018 - February, May - July 2018</h5>
+    <ul>
+      <li>Designed, developed and tested web-based database-driven software
+       applications using ColdFusion, JavaScript, HTML, and CSS</li>
+      <li>Worked with cloud systems such as Amazon EC2 and S3 and external
+       API's using MySQL and XML</li>
+      <li>Maintained current codebase and managed code repository
+       using ColdFusion, MySQL, and JavaScript</li>
+      <li>Created and modified the parts of company's library using ColdFusion
+       and MySQL</li>
+    </ul>
+
+    <h4>Miller Electrics, LLC.</h4>
+    <h5>Software Engineering Intern</h5>
+    <h5 class="italic">May 2019 - August 2019</h5>
+    <ul>
+      <li>Enabling GPS on Embedded SOM (Linux Environment) using C and C++</li>
+      <li>Working with Microsoft Azure IoT Hub to enable IoT solution to the project</li>
+      <li>Data management from IoT Hub to Power BI</li>
+    </ul>
+
+  </div>
 
 </body>
 </html>
