--- a/1.html
+++ b/1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<!-- <html lang="en" dir="ltr"> -->
-
 
 <head>
   <!-- creating name for the website(tab) -->
   <title>Dong Jae Shin's Website</title>
   <meta charset="utf-8">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+  <script src="color.js"></script>
   <link rel = "stylesheet" href="style.css">
 </head>
 
@@ -15,9 +15,11 @@
 
   <div id = "grid">
     <ol>
+
       <li><a href = "1.html" class = "active"> About Me </a></li>
       <li><a href = "2.html"> Projects </a></li>
       <li><a href = "3.html"> Career </a></li>
+      <li><a href = "playground.html"> Play Ground </a></li>
     </ol>
 
     <div id = "article">
