--- a/2.html
+++ b/2.html
@@ -7,6 +7,8 @@
   <!-- creating name for the website(tab) -->
   <title>Dong Jae Shin's Website</title>
   <meta charset="utf-8">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+  <script src="color.js"></script>
   <link rel = "stylesheet" href="style.css">
 </head>
 <body>
@@ -14,9 +16,11 @@
 
   <div id = "grid">
     <ol>
+
       <li><a href = "1.html">  About Me </a></li>
       <li><a href = "2.html"class = "active"> Projects </a></li>
       <li><a href = "3.html"> Career </a></li>
+      <li><a href = "playground.html"> Play Ground </a></li>
     </ol>
 
   <div id = "article">
