--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <!-- creating name for the website(tab) -->
   <title>Dong Jae Shin's Website</title>
   <meta charset="utf-8">
+  <script src="color.js"></script>
   <link rel = "stylesheet" href="style.css">
 </head>
+
 <body>
   <h1><a href = "index.html"> Dong Jae (Chris) Shin's Website</a></h1>
 
   <div id = "grid">
+
     <ol>
       <li><a href = "1.html"> About Me </a></li>
       <li><a href = "2.html"> Projects </a></li>
       <li><a href = "3.html"> Career </a></li>
+      <li><a href = "playground.html"> Play Ground </a></li>
     </ol>
 
     <div id = "article">
