--- a/playground.html
+++ b/playground.html
@@ -42,6 +42,11 @@
           <!-- 1024 game -->
           <h2> 1024 </h2>
 
+
+          <div>
+            <strong>Score: </strong><strong id = "score">0</strong>
+          </div>
+
           <input type = "button" value = "Reset" onclick = "resetGame();">
           <script>
             //document.write(getRandomLocation(4));
